force-app/main/default/objects/Loan_Calculation_Product__c/fields/Vehicle_Classification_list__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Classification_list__c</fullName>
    <label>Vehicle Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used (Imported)</fullName>
            </value>
            <value>
                <fullName>Used (Local - Pre-owned)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>