force-app/main/default/objects/Loan_Calculation_Product__c/fields/Waive_Processing_Fee_Flag__c.field-meta.xml
<CustomField>
    <fullName>Waive_Processing_Fee_Flag__c</fullName>
    <label>Waive Processing Fee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>