force-app/main/default/objects/Loan_Calculation_Product__c/fields/X1st_Month_s_Instalment_Payable_Number__c.field-meta.xml
<CustomField>
    <fullName>X1st_Month_s_Instalment_Payable_Number__c</fullName>
    <label>1st Month&apos;s Instalment Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>