force-app/main/default/objects/Loan_Calculation_Product__c/fields/Year_of_Motor_Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Motor_Vehicle_Number__c</fullName>
    <label>Year of Motor Vehicle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>