force-app/main/default/objects/Loan_Calculation_Product__c/recordTypes/Auto.recordType-meta.xml
<RecordType>
    <fullName>Auto</fullName>
    <active>true</active>
    <description>Auto loan product</description>
    <label>Auto</label>
</RecordType>