force-app/main/default/objects/Loan_Calculation_Product__c/recordTypes/Credit_Card.recordType-meta.xml
<RecordType>
    <fullName>Credit_Card</fullName>
    <active>true</active>
    <description>Credit card product</description>
    <label>Credit Card</label>
</RecordType>