force-app/main/default/objects/Loan_Calculation_Product__c/recordTypes/Line_of_Credit.recordType-meta.xml
<RecordType>
    <fullName>Line_of_Credit</fullName>
    <active>true</active>
    <description>Line of Credit product</description>
    <label>Line of Credit</label>
</RecordType>