force-app/main/default/objects/Loan_Calculation_Product__c/recordTypes/Unsecured.recordType-meta.xml
<RecordType>
    <fullName>Unsecured</fullName>
    <active>true</active>
    <description>Unsecured product</description>
    <label>Unsecured</label>
</RecordType>